{Fixed multiviewer overlapping issue with scroll slider}

--- a/app/webroot/css/viewer/viewer.less
+++ b/app/webroot/css/viewer/viewer.less
@@ -3124,6 +3124,9 @@ This file is generated by `grunt build`, do not edit it by hand.
     #viewer-left{
         width: 100%;
     }
+    .scroll-shift-viewer{
+        margin-top: 156px !important;
+    }
     #viewer-right{
         width: 100%;
         margin-top: 112px;
@@ -3131,4 +3134,9 @@ This file is generated by `grunt build`, do not edit it by hand.
     #resources-nav{
         position: absolute;
     }
+    .scroll-shift-nav{
+        margin-top: 42px;
+    }
+    
+    
 }
